# Loguru-Discord

./: README.md  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yaml  ci.yml  workflow.yaml
loguru_discord/: __init__.py  intercept.py  sink.py  sink.pyi
tests/: __init__.py  test_sink.py
tests/loguru_discord/: __init__.py  test_sink.py
