[tool.poetry]
name = "loguru-discord"
version = "1.3.1"
description = "Lightweight sink for Loguru that sends logs to Discord via webhook."
authors = ["EthanC <16727756+EthanC@users.noreply.github.com>"]
"repository" = "https://github.com/EthanC/Loguru-Discord"
license = "MIT"
readme = "README.md"
keywords = ["loguru", "discord", "logging", "webhook", "sink"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
packages = [{ include = "loguru_discord" }]

[tool.poetry.urls]
"Twitter" = "https://twitter.com/Mxtive"
"Issue Tracker" = "https://github.com/EthanC/Loguru-Discord/issues"

[tool.poetry.dependencies]
python = "^3.12"
discord-webhook = "^1.3.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.9"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["I"]
