[project]
name = "loguru-discord"
version = "1.4.0"
description = "Lightweight sink for Loguru that sends logs to Discord via webhook."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord-webhook>=1.3.1",
]
license = "MIT"
keywords = ["loguru", "discord", "logging", "webhook", "sink"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/EthanC/Loguru-Discord"
Issues = "https://github.com/EthanC/Loguru-Discord/issues"
Changelog = "https://github.com/EthanC/Loguru-Discord/commits/main/"
Twitter = "https://twitter.com/Mxtive"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.2",
    "pytest>=8.3.2",
]

[tool.ruff.lint]
select = ["I"]
